--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Days+One&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Hind:wght@300;400;500;600;700&family=Kalam:wght@300;400;700&family=Krona+One&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Devanagari:wdth@87.5&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Oswald&family=Oxygen:wght@300;400;700&family=Playwrite+CL+Guides&family=Playwrite+IT+Moderna+Guides&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&display=swap');
+
 @import "tailwindcss";
+
 
 ::-webkit-scrollbar{
     display: none;
+}
+
+*{
+    font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
